[gd_scene load_steps=16 format=3 uid="uid://cvh8mc8ybmio1"]

[ext_resource type="Theme" uid="uid://c1tenirmy1xiy" path="res://Assets/Menu/Main_Menu_Theme.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://n1hmbywl5fys" path="res://Assets/Menu/Mesh.png" id="2"]
[ext_resource type="Texture2D" uid="uid://5xur7gw1hix8" path="res://Assets/Menu/Bad.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b40wk8f1w5gqe" path="res://Assets/Menu/Tileset.png" id="4"]
[ext_resource type="Script" path="res://Menus/Menu.gd" id="5"]
[ext_resource type="Script" path="res://Menus/Menu_Slider.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://ctxaquevonft0" path="res://Assets/Menu/MineMark.png" id="8"]
[ext_resource type="Texture2D" uid="uid://be5s6vqldde2o" path="res://Assets/Menu/None.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bjanaphicydcq" path="res://Assets/Menu/Multimesh.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bogy0vgsodrqp" path="res://Assets/Menu/Server.png" id="11"]

[sub_resource type="ButtonGroup" id="ButtonGroup_lav68"]

[sub_resource type="ButtonGroup" id="ButtonGroup_iuq17"]

[sub_resource type="Animation" id="4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/Title/Splash:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.350811, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/Title/Splash:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/Title/Splash:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="5"]
resource_name = "Splash"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/Title/Splash:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/Title/Splash:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.7, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/Title/Splash:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.350811, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gilss"]
_data = {
"RESET": SubResource("4"),
"Splash": SubResource("5")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -800.0
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_vertical = 3
script = ExtResource("5")
splash_images = Array[Resource]([ExtResource("9"), ExtResource("3"), ExtResource("11"), ExtResource("2"), ExtResource("4"), ExtResource("10")])
chunk_radius_presets = Array[int]([2, 8, 24, 48, 97])
fog_enabled = Array[bool]([true, true, true, true, true])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 12.0
offset_right = 274.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="Title" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("8")
stretch_mode = 1

[node name="Splash" type="Label" parent="CenterContainer/Title"]
layout_mode = 0
offset_left = 200.0
offset_top = 44.0
offset_right = 800.0
offset_bottom = 84.0
rotation = -0.350811
pivot_offset = Vector2(300, 20)
theme = ExtResource("1")
theme_override_colors/font_color = Color(1, 0.866667, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 14
text = "aaaaaaaaaaaaaaaaaa"
horizontal_alignment = 1

[node name="SC" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, -666)
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -298.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1")

[node name="CC" type="CenterContainer" parent="SC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC" type="VBoxContainer" parent="SC/CC"]
layout_mode = 2

[node name="Play_Buttons" type="CenterContainer" parent="SC/CC/VBC"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="SC/CC/VBC/Play_Buttons"]
layout_mode = 2

[node name="Play" type="Button" parent="SC/CC/VBC/Play_Buttons/VB"]
layout_mode = 2
theme = ExtResource("1")
theme_override_font_sizes/font_size = 32
text = "Play Game"

[node name="HSeparator6" type="HSeparator" parent="SC/CC/VBC/Play_Buttons/VB"]
layout_mode = 2
theme = ExtResource("1")

[node name="Test_Static" type="Button" parent="SC/CC/VBC/Play_Buttons/VB"]
layout_mode = 2
theme = ExtResource("1")
text = "Run Static Chunk Load Test"

[node name="Test_Dynamic" type="Button" parent="SC/CC/VBC/Play_Buttons/VB"]
layout_mode = 2
theme = ExtResource("1")
text = "Run Dynamic Chunk Load Test"

[node name="Test_Manual" type="Button" parent="SC/CC/VBC/Play_Buttons/VB"]
layout_mode = 2
theme = ExtResource("1")
text = "Run Manual Test"

[node name="HSeparator3" type="HSeparator" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")

[node name="Chunk_Label" type="Label" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
theme_type_variation = &"Settings"
text = "Chunk Variant:"

[node name="Chunk_Label_Container" type="HBoxContainer" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
alignment = 1

[node name="None" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_lav68")
text = "None"

[node name="Bad" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_lav68")
text = "Bad"

[node name="Mesh" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_lav68")
text = "Mesh"

[node name="TileSet" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_lav68")
text = "TileSet"

[node name="Simple" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_lav68")
text = "Server*"

[node name="Ultimate" type="Button" parent="SC/CC/VBC/Chunk_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_lav68")
text = "Multimesh*"

[node name="Warning" type="Label" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
theme_type_variation = &"Settings"
text = "* Chunk is drawn, but does not have physics."

[node name="Performance_Label" type="Label" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
theme_type_variation = &"Settings"
text = "Performance Settings:"

[node name="Performance_Label_Container" type="HBoxContainer" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
alignment = 1

[node name="Potato" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_iuq17")
text = "Potato"

[node name="Low" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_iuq17")
text = "Low"

[node name="Medium" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_iuq17")
text = "Medium"

[node name="High" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_iuq17")
text = "High"

[node name="Extreme" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_iuq17")
text = "F in Chat"

[node name="Custom" type="Button" parent="SC/CC/VBC/Performance_Label_Container"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
toggle_mode = true
button_group = SubResource("ButtonGroup_iuq17")
text = "Custom"

[node name="HSeparator5" type="HSeparator" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")

[node name="Chunk_Radius" type="HBoxContainer" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
script = ExtResource("6")

[node name="Text" type="Label" parent="SC/CC/VBC/Chunk_Radius"]
layout_mode = 2
theme = ExtResource("1")
text = "Chunk Load Radius:"

[node name="Label" type="Label" parent="SC/CC/VBC/Chunk_Radius"]
layout_mode = 2
theme = ExtResource("1")
text = "32"

[node name="HSlider" type="HSlider" parent="SC/CC/VBC/Chunk_Radius"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
max_value = 50.0
value = 32.0
scrollable = false

[node name="Max_Unloaded_Chunks" type="HBoxContainer" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
script = ExtResource("6")

[node name="Text" type="Label" parent="SC/CC/VBC/Max_Unloaded_Chunks"]
layout_mode = 2
theme = ExtResource("1")
text = "Max Stale Chunks:"

[node name="Label" type="Label" parent="SC/CC/VBC/Max_Unloaded_Chunks"]
layout_mode = 2
theme = ExtResource("1")
text = "10000"

[node name="HSlider" type="HSlider" parent="SC/CC/VBC/Max_Unloaded_Chunks"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
max_value = 50.0
value = 32.0
scrollable = false

[node name="Thread_Count" type="HBoxContainer" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
script = ExtResource("6")

[node name="Text" type="Label" parent="SC/CC/VBC/Thread_Count"]
layout_mode = 2
theme = ExtResource("1")
text = "Chunk Loading Threads:"

[node name="Label" type="Label" parent="SC/CC/VBC/Thread_Count"]
layout_mode = 2
theme = ExtResource("1")
text = "12"

[node name="HSlider" type="HSlider" parent="SC/CC/VBC/Thread_Count"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
max_value = 50.0
value = 32.0
scrollable = false

[node name="HSeparator4" type="HSeparator" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")

[node name="Other_Settings_Label" type="Label" parent="SC/CC/VBC"]
layout_mode = 2
theme = ExtResource("1")
theme_type_variation = &"Settings"
text = "Other Settings:"

[node name="CC" type="CenterContainer" parent="SC/CC/VBC"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="SC/CC/VBC/CC"]
layout_mode = 2
alignment = 1

[node name="Invert_Mouse" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Invert Mouse"

[node name="Invert_Controller" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Invert Controller"

[node name="Fog" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Fog"

[node name="Single_Threaded" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Render on Main Thread"

[node name="Large_Chunks" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Large Chunks"

[node name="Single_Chunk" type="CheckButton" parent="SC/CC/VBC/CC/VB"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1")
text = "Single Chunk"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gilss")
}

[node name="Splash_Image" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -225.0
offset_right = 1200.0
offset_bottom = 675.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("2")

[connection signal="pressed" from="SC/CC/VBC/Play_Buttons/VB/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="SC/CC/VBC/Play_Buttons/VB/Test_Static" to="." method="_on_Test_Static_pressed"]
[connection signal="pressed" from="SC/CC/VBC/Play_Buttons/VB/Test_Dynamic" to="." method="_on_Test_Dynamic_pressed"]
[connection signal="pressed" from="SC/CC/VBC/Play_Buttons/VB/Test_Manual" to="." method="_on_Test_Manual_pressed"]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/None" to="." method="_on_Chunk_Type_pressed" binds= [0]]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/Bad" to="." method="_on_Chunk_Type_pressed" binds= [1]]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/Mesh" to="." method="_on_Chunk_Type_pressed" binds= [3]]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/TileSet" to="." method="_on_Chunk_Type_pressed" binds= [4]]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/Simple" to="." method="_on_Chunk_Type_pressed" binds= [2]]
[connection signal="pressed" from="SC/CC/VBC/Chunk_Label_Container/Ultimate" to="." method="_on_Chunk_Type_pressed" binds= [5]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/Potato" to="." method="_on_Settings_Preset_pressed" binds= [0]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/Low" to="." method="_on_Settings_Preset_pressed" binds= [1]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/Medium" to="." method="_on_Settings_Preset_pressed" binds= [2]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/High" to="." method="_on_Settings_Preset_pressed" binds= [3]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/Extreme" to="." method="_on_Settings_Preset_pressed" binds= [4]]
[connection signal="pressed" from="SC/CC/VBC/Performance_Label_Container/Custom" to="." method="_on_Settings_Preset_pressed" binds= [5]]
[connection signal="changed" from="SC/CC/VBC/Chunk_Radius" to="." method="_on_Chunk_Radius_changed"]
[connection signal="value_changed" from="SC/CC/VBC/Chunk_Radius/HSlider" to="SC/CC/VBC/Chunk_Radius" method="_on_HSlider_value_changed"]
[connection signal="changed" from="SC/CC/VBC/Max_Unloaded_Chunks" to="." method="_on_Max_Unloaded_Chunks_changed"]
[connection signal="value_changed" from="SC/CC/VBC/Max_Unloaded_Chunks/HSlider" to="SC/CC/VBC/Max_Unloaded_Chunks" method="_on_HSlider_value_changed"]
[connection signal="changed" from="SC/CC/VBC/Thread_Count" to="." method="_on_Thread_Count_changed"]
[connection signal="value_changed" from="SC/CC/VBC/Thread_Count/HSlider" to="SC/CC/VBC/Thread_Count" method="_on_HSlider_value_changed"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Invert_Mouse" to="." method="_on_Invert_Mouse_toggled"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Invert_Controller" to="." method="_on_Invert_Controller_toggled"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Fog" to="." method="_on_Fog_toggled"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Single_Threaded" to="." method="_on_SingleThreaded_toggled"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Large_Chunks" to="." method="_on_Large_Chunks_toggled"]
[connection signal="toggled" from="SC/CC/VBC/CC/VB/Single_Chunk" to="." method="_on_Skyblock_toggled"]
